--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="slide-section">
     <div class="slide-controls">
-      <label for="jump-to-slide">Jump&nbsp;To:</label>
+      <label for="jump-to-slide" style="color: #191970">Jump&nbsp;To:</label>
       <select class="slide-nav-select" id="jump-to-slide"></select>
     </div>
     <div class="slide-data">
@@ -38,10 +38,12 @@
     <div class="slide-Total_events"></div>
     </div>
     <div class="slide-img"></div>
+    <div class="slide-content"></div>
     <div class="slide-controls">
-      <button class="slide-nav-button" id="prev-slide">⧏</button>
-      <button class="slide-nav-button" id="next-slide">⧐</button>
+      <button class="slide-nav-button" id="prev-slide">&lt Previous</button>
+      <button class="slide-nav-button" id="next-slide">Next &gt</button>
     </div>
+    <a href = "https://www.topendsports.com/events/winter/hosts/index.htm">Winter Olympics Host City List</a>
   </div>
 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
