--- a/exercise/Jiamin_Tan_Week7/index.html
+++ b/exercise/Jiamin_Tan_Week7/index.html
@@ -23,8 +23,8 @@
     <div class="slide-title"></div>
     <div class="slide-content"></div>
     <div class="slide-controls">
-      <button class="slide-nav-button" id="prev-slide">⧏</button>
-      <button class="slide-nav-button" id="next-slide">⧐</button>
+      <button class="slide-nav-button" id="prev-slide">Previous</button>
+      <button class="slide-nav-button" id="next-slide">Next</button>
     </div>
   </div>
 
