--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=">
+<meta http-equiv="refresh" content="0; url=http://zhenzhaoxu.com/musa-611-spring-2022-week7/exercise/mymap/">
