update the story

--- a/exercise/mymap/index.html
+++ b/exercise/mymap/index.html
@@ -80,21 +80,100 @@
     </div>
     <div class="section">
         <div class="card-body">
-            <h4 class="card-title">Journey, Wind, and Power</h4>
+            <h4 class="card-title">Journey with Wind </h4>
             <h5 class="card-subtitle">Leveraging the power of nature</h5>
             <div class="card-text">
                 <p>
+                    Sometimes, Beak Beak can easily fly over the Indian Ocean and even the South China Sea with the
+                    help of the power of subtropical monsoon. With some good luck, the wind speed can reach up to
+                    <b>50 kilometers per hour</b>.
+                </p>
+                <p>
+                    It'll take Beak-Beak around 10-15 days to get to the east China, and get some rest there.
+                </p>
 
-                </p>
-                <p class="mt-3">
-                    Getting into the late March, it will soon be cold here... Maybe it's time for Beak-Beak to start!!
-                </p>
             </div>
         </div>
     </div>
+
+    p4
+    <div class="section">
+        <div class="card-body">
+            <h4 class="card-title">A BIG Meal!!</h4>
+            <h5 class="card-subtitle">Swamp, Beach, and Marsh</h5>
+            <div class="card-text">
+                <p>
+                    Unknowingly, it's mid April. It's time to get some energy to move on. Yellow Sea is its chance to
+                    have a good meal on the journey. The beaches, swamps and marshes with lots of molluscs and insects
+                    are like a cafeteria for her.
+                </p>
+
+                <img src="res/knot-2.png" class="card-img">
+                <small>Source: <a href="https://www.youtube.com/watch?v=KMKP8Zvvy0U">
+                        [EAAFP] World Migratory Bird Day 2020</a> </small>
+
+                <p class="mt-3">
+                    With its beak full of receptors, it goes deep into the soil of 3-5cm and looks for its lunch. During
+                    the following month, she will constantly travel to and from the Yellow Sea of China and change
+                    different restaurants every day.
+                </p>
+                <p>
+
+                    It is worth noting that due to the excessive development of coastal maps in recent years, such good
+                    restaurants (wetlands) have become less and less. (to be supplemented)
+                </p>
+
+
+            </div>
+        </div>
+    </div>
+
+    <!-- page 5 -->
+    <div class="section">
+        <div class="card-body">
+            <h4 class="card-title">Finish of the Journey</h4>
+            <h5 class="card-subtitle">What a summer!</h5>
+            <div class="card-text">
+
+                <p>
+                    Many sandpipers form monogamous pairs, so does Beak Beak. She meets her husband in northeast
+                    Siberia. They finds a tundra that is perfect for babies.
+                </p>
+                <p>
+                    They exchange on the nest in the morning and in the evening so that their incubation rhythm follows
+                    a 24-hour day. Their children hatch after about three weeks of incubation and are able to walk and
+                    forage within a few hours of hatching. Beak Beak and her husband guide and brood their children
+                    together.
+                </p>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="section">
+        <div class="card-body">
+            <h4 class="card-title">6</h4>
+            <h5 class="card-subtitle">Leveraging the power of nature</h5>
+            <div class="card-text">
+                <p>
+                    Sometimes, Beak Beak can easily fly over the Indian Ocean and even the South China Sea with the
+                    help of the power of subtropical monsoon. With some good luck, the wind speed can reach up to
+                    <b>50 kilometers per hour</b>.
+                </p>
+                <p>
+                    It'll take Beak-Beak around 10-15 days to get to the east China, and get some rest there.
+                </p>
+
+            </div>
+        </div>
+    </div> -->
+
+
+
     <div class="section">
         <div class="card-body">
             <h4 class="card-title">To Be Continued...</h4>
+            <p class="mt-5">More details, backgrounds, environments, and related data are going to be added.</p>
         </div>
     </div>
 
